backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend
  labels:
    app: project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
      - name: backend
        image: gcr.io/eternal-bongo-379210/nuriz2:1.0                     
        ports:
        - containerPort: 3040
