back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-b
spec:
  type: ClusterIP
  selector:
    app: project
  ports:
    - port: 3040
      targetPort: 3040
