ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "www.cholpona.ml"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service-f
            port:
              number: 80 
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: my-service-b
            port:
              number: 3040
